<resources>
    <string name="app_name">St Xavier\'s Social Club</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="selected_image">selected_image</string>
    <string name="scale_type">Scale_Type</string>
    <string name="speak_to_type">Say Something About Your Post.</string>
    <string name="Update_profile">Update Profile Photo</string>
    <string name="Media_Data">Media_data</string>
    <string name="IsViewProfile">is_view_profile</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="log_out_fragment">Log Out</string>
    <string name="report_bug_fragment">Report A Bug</string>
    <string name="friends_filter_fragment">friends_filter</string>
    <string name="social_feed_fragment">Social_Feed</string>
    <string name="filter_1_fragment">filter_1</string>
    <string name="new_chat_user_fragment">New_user_chat</string>
    <string name="chat_fragment">Chat_fragment</string>
    <string name="prepare_card_fragment">Prepare_card</string>
    <string name="get_started_fragment">Get_Started</string>
    <string name="sign_up_fragment">Sign_up</string>
    <string name="course_and_full_name_Card_fragment">course_and_full_name_Card_fragment</string>
    <string name="profile_photo_fragment_card">profile_photo_fragment_card</string>
    <string name="Card_information_fragment">Card_Information_Fragment</string>
    <string name="likes_messages_filter_fragment">likes_messages_filter_fragment</string>
    <string name="music_movies_books_fragment">music_movies_books_fragment</string>
    <string name="games_fragment">music_movies_books_fragment</string>
    <string name="profile_fragment">Profile</string>
    <string name="confirm_password_dialog_fragment">ConfirmPasswordDialog</string>
    <string name="auth_success_singup">Sign Up success! Sending Verification Email.</string>
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_user_common_details">user_common_details</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_videos">videos</string>
    <string name="dbname_user_videos">user_videos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="dbname_chats">chats</string>
    <string name="dbname_chats_removed">chats_removed</string>
    <string name="dbname_chat_meta_data">chat_meta_data</string>
    <string name="dbname_misc">Miscellaneous</string>
    <string name="not_available">N/A</string>
    <string name="field_chat_details">chat_details</string>
    <string name="field_chat_removed">chat_removed</string>
    <string name="field_chat_uid">chat_uid</string>
    <string name="field_public_key">public_key</string>
    <string name="field_private_key_backup">private_key_backup</string>
    <string name="field_my_public_key">my_public_key</string>
    <string name="field_other_public_key">other_public_key</string>
    <string name="field_username">username</string>
    <string name="field_filters_matched">filters_matched</string>
    <string name="field_message_sent">message_sent</string>
    <string name="field_animation_type_filter_message">animation_type_filter_message</string>
    <string name="field_random_match">Random Match</string>
    <string name="field_birth_date">birth_date</string>
    <string name="field_email">email</string>
    <string name="field_phoneNumber">phone_number</string>
    <string name="field_email_verified">email_verified</string>
    <string name="field_is_online">is_online</string>
    <string name="field_page_number">page_number</string>
    <string name="field_collegeUID">college_uid</string>
    <string name="field_description">description</string>
    <string name="field_card_bio">card_bio</string>
    <string name="field_card_bg_color">card_color_bg</string>
    <string name="field_website">website</string>
    <string name="field_profile_photo">profile_photo</string>
    <string name="field_course">course</string>
    <string name="field_location">location</string>
    <string name="field_posts">posts</string>
    <string name="field_following">following</string>
    <string name="field_followers">friendly_xavierites</string>
    <string name="field_follow_list_for_notifications">follow_list_for_notifications</string>
    <string name="field_message_list_for_notifications">message_list_for_notifications</string>
    <string name="field_received">received</string>
    <string name="field_received_count">received_count</string>
    <string name="field_sent">sent</string>
    <string name="field_sent_count">sent_count</string>
    <string name="field_likes">likes</string>
    <string name="field_user_id">user_id</string>
    <string name="field_mediaID">mediaID</string>
    <string name="field_caption">caption</string>
    <string name="field_date_added">date_added</string>
    <string name="field_font">CaptionFont</string>
    <string name="field_color_caption">CaptionColor</string>
    <string name="field_comments">comments</string>
    <string name="field_chats">chats</string>
    <string name="field_display_name">display_name</string>
    <string name="scale_type_center_crop">CENTER_CROP</string>
    <string name="scale_type_center_inside">CENTER_INSIDE</string>
    <string name="No_filter_results_available">No Results Available</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="general_details">General Details</string>
    <string name="college_year">College Year</string>
    <string name="title_post">Title &amp; Posts</string>
    <string name="books">Books</string>
    <string name="movie">Movies\\ Tv Shows</string>
    <string name="music">Music</string>
    <string name="hobbies">Hobbies\\Interests</string>
    <string name="societies">Societies In College</string>
    <string name="games">Games</string>
    <string name="dream_destination">Dream Destinations</string>
    <string name="course">Courses In College</string>
    <string name="zodiac_sign">Zodiac Sign</string>
    <string name="pronouns">Pronouns</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="LEFT_TV_COLOR">LEFT_TV_COLOR</string>
    <string name="RIGHT_TV_COLOR">RIGHT_TV_COLOR</string>
    <string name="RL_COLOR">RL_COLOR</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="dbname_user_card">user_card</string>
    <string name="dbname_filter_data">filter_data</string>
    <string name="card_completed">completed</string>
    <string name="society_hansraj">society_hansraj</string>
    <string name="society_name">society_name</string>
    <string name="society_cover_url">society_cover_url</string>
    <string name="society_desp">society_desp</string>
    <string name="field_society">my_societies</string>
    <string name="field_filter">filter_name</string>
    <string name="field_class_representative">class_representative</string>
    <string name="field_other_posts">other_posts</string>
    <string name="field_sections_in_course">sections_in_course</string>
    <string name="field_position_name_in_other_post">position_name</string>
    <string name="field_organization_name_in_other_post">organization_name</string>
    <string name="field_remark_in_other_post">remark</string>
    <string name="field_to_be_checked_cr_list">to_be_checked_CR_list</string>
    <string name="field_to_be_checked_other_pos_list">to_be_checked_other_pos_list</string>
    <string name="field_is_private">is_private</string>
    <string name="field">fields</string>
    <string name="field_private">private</string>
    <string name="field_public">public</string>
    <string name="field_no_gender">Prefer not to say gender</string>
    <string name="no_selection">no_selection</string>
    <string name="field_track_name">track_name</string>
    <string name="field_singer_name">singer_name</string>
    <string name="field_cover_url">cover_url</string>
    <string name="field_movie_name">movie_name</string>
    <string name="field_movie_overview">movie_overview</string>
    <string name="field_book_name">book_name</string>
    <string name="field_book_authors">book_authors</string>
    <string name="field_first_year">First Year</string>
    <string name="field_second_year">Second Year</string>
    <string name="field_third_year">Third Year</string>
    <string name="field_game_name">game_name</string>
    <string name="field_game_rating">game_rating</string>
    <string name="field_game_platform">game_platform</string>
    <string name="field_game_cover_url">game_cover_url</string>
    <string name="Top5Platform">top_5_platforms</string>
    <string name="field_games">games</string>
    <string name="field_private_data_notice">* Please Note, if you make this data private then you will not appear in the Find Friends search when someone searches based upon this Criteria.</string>
    <string name="The_Movie_DB_API_KEY">a1d0f215f24d27bd7165e9e9a55bfb18</string>
    <string name="The_GOOGLE_BOOKS_API_KEY">AIzaSyBbjbvTigldYL0mSEX9KuyI7Y4T5TYTayA</string>
    <string name="Rapid_MUSIC_API_DEEZER">2ce5bbd84amsh1b536400504bab9p18b7b5jsne6afd869c399</string>
    <string name="rawg_games_api_key">52bb1536e6574d2ca3fbb7b8b1834768</string>
    <string name="MOVIE_COVER_CONSTANT_URL">https://image.tmdb.org/t/p/w500</string>
    <string name="new_photo">new photo</string>
    <string name="new_profile_photo">new profile photo</string>
    <string name="enactus_hasnraj">Enactus Hansraj</string>
    <string name="enactus_hansraj_desp">To create an impact and change lives, Enactus opens doors for you to explore immense possibilities, channel the true entrepreneur in you and make your vision a reality.\n\nEnactus Hansraj warmly invites the batch of ‘23 to Orientation 2020.\n\nDo join us to embark on this transformational journey and witness what it feels like to be at Enactus!</string>
    <string name="the_dramatics_society">Dramatics Society Hansraj</string>
    <string name="the_dramatics_society_desp">Since its official inception in the year 1987, the Hansraj Dramatics Society has held a prominent name in the Delhi University theatre circuit. Initially christened HANDS in its early years, today it is simply known as the HANSRAJ DRAMATICS SOCIETY, which speaks for itself. It has nurtured many talented actors and directors like SRK, Shiney Ahuja, Anurag Kashyap, Parvin Dabas and till date continues to house great talent with exceptional potential.</string>
    <string name="nss_hansraj">NSS: National Service Scheme</string>
    <string name="logo_st_xaviers">Logo St Xaviers</string>
    <string name="email_address_hint_lo">Email address</string>
    <string name="password_hint_lo">Password</string>
    <string name="log_in_button_lo">Log In</string>
    <string name="sign_up_link_lo">Not a member of this club? Sign Up</string>
    <string name="loading_tv_lo">Entering the social club……</string>
    <string name="app_title_su">app title</string>
    <string name="email_address_hint_su">Email Address</string>
    <string name="username_hint_su">Username</string>
    <string name="password_hint_su">Password</string>
    <string name="confirm_password_hint_su">Confirm Password</string>
    <string name="sign_up_button_su">Sign Up</string>
    <string name="laoding_tv_su">Registering. Fill out the college card next!</string>
    <string name="log_in_link_su">Already a Member? Log In</string>
    <string name="confirm_password_titela_dialog">Confirm Password</string>
    <string name="enter_your_password_hint_dialog">Enter your password.</string>
    <string name="cancel_button_dialog">Cancel</string>
    <string name="change_email_button_dialog">Change Email</string>
</resources>