<?xml version="1.0" encoding="utf-8"?>

        <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_corners_dialogbox">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_border_bottom_transparent">

        <TextView
            android:layout_width="215dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password_titela_dialog"
            android:layout_centerHorizontal="true"
            android:id="@+id/dialogTitle"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:shadowDy="10"
            android:shadowDx="10"
            android:shadowColor="@android:color/black"
            android:shadowRadius="5"
             />
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/dialogTitle"
    app:hintTextColor="@android:color/white"
    style="@style/ConfirmPasswordDialog">
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/enter_your_password_hint_dialog"
            android:layout_below="@id/dialogTitle"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="bold"
            android:id="@+id/dialogPasswordEditText"
            android:textSize="16sp"
            android:backgroundTint="@android:color/holo_blue_dark"
            />
</com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_transparent"
        >
        <View
            android:layout_width="3dp"
            android:layout_height="70dp"
            android:layout_marginStart="130dp"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel_button_dialog"
            android:shadowDy="10"
android:layout_marginTop="10sp"
            android:shadowDx="10"
            android:shadowColor="@android:color/black"
            android:shadowRadius="5"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
        <Button
            android:layout_width="150dp"
            android:layout_marginStart="10dp"
            android:layout_height="66dp"
            android:text="@string/change_email_button_dialog"
            android:textSize="16sp"
            android:shadowDy="10"
            android:shadowDx="10"
            android:shadowColor="@android:color/black"
            android:shadowRadius="5"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:id="@+id/positive"
            android:background="@android:color/transparent"
            android:layout_toEndOf="@id/negative"/>

    </RelativeLayout>
</LinearLayout>
